# Parse-Swift

./: .codecov.yml  .gitignore  .spi.yml  .swiftlint.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Gemfile  LICENSE  MIGRATION.md  Makefile  Package.swift  Package@5.1.swift  ParseSwift.podspec  ParseSwift.podtemplate  README.md  SECURITY.md  info.lcov  swiftlint.yml  update_build
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ---1-report-an-issue.md  ---2-feature-request.md
.github/workflows/: ci.yml  codacy.yml  release.yml  swift.yml
Parse/: API.swift  Info.plist  Parse.swift  ParseEncoder.swift  RESTBatchCommand.swift  RESTCommand.swift  Result.swift
Parse-macOS/: Info.plist
Parse.playground/: contents.xcplayground
Parse.xcodeproj/: project.pbxproj
Parse.xcworkspace/: contents.xcworkspacedata
Parse/MutationOperations/: AddUniqueOperation.swift  RemoveOperation.swift
Parse/Objects Protocols/: ObjectType+Query.swift  ObjectType.swift  UserType.swift
Parse/REST/: RESTCommand.swift
Parse/Types/: ACL.swift  File.swift  GeoPoint.swift  Object+Query.swift  ObjectType+Query.swift  ObjectType.swift  ParseMutationContainer.swift  ParseObjectType.swift  ParseUserType.swift  Pointer.swift  Query.swift  UserType.swift
ParseSwift/: Parse.swift  ParseEncoder.swift
ParseSwift-iOS/: Info.plist
ParseSwift-macOS/: Info.plist
ParseSwift-tvOS/: ParseSwift_tvOS.h
ParseSwift-watchOS/: ParseSwift_watchOS.h
ParseSwift.playground/: contents.xcplayground
ParseSwift.playground/Sources/: Common.swift
ParseSwift.xcodeproj/: project.pbxproj
ParseSwift/MutationOperations/: AddUniqueOperation.swift  DeleteOperation.swift  IncrementOperation.swift  ParseMutationContainer.swift
ParseSwift/Objects Protocols/: ObjectType.swift  UserType.swift
ParseSwift/REST/: RESTBatchCommand.swift  RESTCommand.swift
ParseSwift/Types/: ACL.swift  GeoPoint.swift  Pointer.swift  Query.swift
ParseSwiftTests/: ParseSwiftTests.swift
ParseSwiftTestsmacOS/: Info.plist  ParseSwiftTestsmacOS.swift
ParseSwiftTeststvOS/: ParseSwiftTeststvOS.swift
ParseTests/: ParseTests.swift
Scripts/: generate-documentation  jazzy.sh  update-gh-pages-documentation-site  update_build
Sources/AnyCodable/: AnyCodable.swift  AnyDecodable.swift  AnyEncodable.swift
Sources/ParseSwift/: API.swift  Asynchronous.swift  Parse.h  Parse.swift  ParseConstants.swift  ParseEncoder.swift  Result.swift  Synchronous.swift
TestHost/: AppDelegate.swift  Info.plist
TestHostTV/: AppDelegate.swift  Info.plist  ViewController.swift
Tests/: LinuxMain.swift
Tests/AnyCodableTests/: AnyCodableTests.swift  AnyDecodableTests.swift  AnyEncodableTests.swift
Tests/ParseSwiftTests/: ACLTests.swift  APICommandTests.swift  APITests.swift  BatchUtilsTests.swift  ExtensionsTests.swift  HashTests.swift  IOS13Tests.swift  InitializeSDKTests.swift  KeychainStoreTests.swift  MergeObjCSDKCombineTests.swift  MergeObjCSDKTests.swift  MigrateObjCSDKCombineTests.swift  MigrateObjCSDKTests.swift  MigrateOldParseInstallationTests.swift  NewParseEncoderTests.swift  ParseACLTests.swift  ParseAnalytics.swift  ParseAnalyticsAsyncTests.swift  ParseAnalyticsCombineTests.swift  ParseAnalyticsTests.swift  ParseAnanlyticsAsyncTests.swift  ParseAnanlyticsCombineTests.swift  ParseAnonymousAsyncTests.swift  ParseAnonymousCombineTests.swift  ParseAnonymousTests.swift  ParseAppleAsyncTests.swift  ParseAppleCombineTests.swift  ParseAppleTests.swift  ParseAuthenticationAsyncTests.swift  ParseAuthenticationCombineTests.swift  ParseAuthenticationTests.swift  ParseBytesTests.swift  ParseCLPTests.swift  ParseCloudAsyncTests.swift  ParseCloudCombineTests.swift  ParseCloudTests.swift  ParseCloudViewModelTests.swift  ParseCloudableAsyncTests.swift  ParseCloudableCombineTests.swift  ParseCloudableTests.swift  (+98 more)
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
api/: Classes.html  Enums.html  Extensions.html  Functions.html  Protocols.html  Structs.html  index.html  search.json  undocumented.json
api/Classes/: CloudViewModel.html  ParseLiveQuery.html  Query.html  QueryViewModel.html  Subscription.html  SubscriptionCallback.html
api/Enums/: Event.html  ParseTextOption.html
api/Extensions/: Error.html  Sequence.html
api/Protocols/: CloudObservable.html  Objectable.html  ParseAuthentication.html  ParseCloud.html  ParseConfig.html  ParseInstallation.html  ParseKeyValueStore.html  ParseLiveQueryDelegate.html  ParseObject.html  ParseObjectMutable.html  ParseQueryScorable.html  ParseRole.html  ParseSession.html  ParseSubscription.html  ParseUser.html  PrimitiveObjectStore.html  QueryObservable.html  QuerySubscribable.html  SubscriptionHandlable.html
api/Structs/: API.html  AnyCodable.html  AnyDecodable.html  AnyEncodable.html  File.html  GeoPoint.html  ParseACL.html  ParseAnalytics.html  ParseAnonymous.html  ParseApple.html  ParseBytes.html  ParseConfiguration.html  ParseEncoder.html  ParseError.html  ParseFacebook.html  ParseFile.html  ParseFileManager.html  ParseGeoPoint.html  ParseGitHub.html  ParseGoogle.html  ParseHealth.html  ParseLDAP.html  ParseLinkedIn.html  ParseOperation.html  ParsePolygon.html  ParseRelation.html  ParseSwift.html  ParseTwitter.html  ParseVersion.html  Pointer.html  (+2 more)
release/: metadata.json
(+2594 files in other folders)
